# NiaNet

./: CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  evolve.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
examples/: evolve_for_diabetes_dataset.py
nianet/: __init__.py  autoencoder.py  helper.py  problem.py
tests/: test_nianet.py
