[tool.poetry]
name = "NiaNet"
version = "1.1.2"
description = "Designing and constructing neural network topologies using nature-inspired algorithms"
authors = ["Sašo Pavlič <saso.pavlic@student.um.si>"]
keywords = ['adaptation', 'deep learning', 'nature-inspired algorithms', 'neural networks', 'torch']
homepage = "https://github.com/SasoPavlic/NiaNet"
repository = "https://github.com/SasoPavlic/NiaNet"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.11.0"
scikit-learn = "^1.0.2"
numpy = "^1.22.3"
niapy = "^2.0.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
